@@ -1,5 +1,9 @@
 2009-01-30  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/TextEditor.cs: implemented ITextEditorDataProvider.
+
+2009-01-30  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/EditMode.cs:
 	* Mono.TextEditor/ClipboardActions.cs: Fixed virtual positions.
 
